--- a/admin/config.yml
+++ b/admin/config.yml
@@ -2,6 +2,7 @@ backend:
   name: github
   repo: blacknacoustic/RidgeSDA-Website  # <-- CHANGE THIS to your GitHub repo
   branch: main  # or 'master' if that's your default
+  auth_scope: repo
 
 media_folder: "assets/uploads"  # where images get saved in the repo
 public_folder: "/assets/uploads"  # how they are accessed in the browser
